# DocxFactory

./: .gitignore  CMakeLists.txt  README.md
csharp/Linux/: WordProcessingMerger.i  WordProcessingMerger_wrap.cxx
csharp/Windows/: WordProcessingCompiler.i  WordProcessingCompiler_wrap.cxx  WordProcessingMerger.i  WordProcessingMerger_wrap.cxx
java/: WordProcessingCompiler.i  WordProcessingCompiler_wrap.cxx  WordProcessingMerger.i  WordProcessingMerger_wrap.cxx
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
progress/slib/: slibbidi.i  slibbidiflip_ansi.i  slibbidiflip_win9x.i  slibbidifrwd.i  slibbidifunc_ansi.i  slibbidifunc_win9x.i  slibbidinum_ansi.i  slibbidinum_win9x.i  slibbidirange.i  slibdate.i  slibdatefrwd.i  sliberr.i  sliberrfrwd.i  slibimg.i  slibinfozip.i  slibinfozipfrwd.i  slibinfozipprop.i  slibmath.i  slibmathfrwd.i  slibos.i  slibosfrwd.i  slibosprop.i  slibpro.i  slibprofrwd.i  slibproprop.i  slibstr.i  slibstrfrwd.i  slibunix.i  slibunixfrwd.i  slibunixprop.i  slibwin.i  slibwinfrwd.i  slibwinprop.i  slibxml.i  slibxmlfrwd.i  slibxmlprop.i  start-slib.i
progress/slibooxml/: slibdocx.i  slibdocxfrwd.i  slibdocxprop.i  slibooxml.i  slibooxmlfrwd.i  slibooxmllic.i  slibooxmlprop.i  slibopc.i  slibxlsx.i  slibxlsxcomm.i  slibxlsxext.i  slibxlsxextfrwd.i  slibxlsxfrwd.i  slibxlsxprop.i
python/: DocxFactory.i  DocxFactory_wrap.cxx
src/ConverterPrinter/: ConversionNotSupportedException.cpp  ConverterPrinter.cpp  ConverterPrinterException.cpp  ExportFormatNotSupportedException.cpp  GradeGroup.cpp  MsExcelUtil.cpp  MsOfficeUtil.cpp  MsWordUtil.cpp  OdfConverterUtil.cpp  OleException.cpp  OpenOfficeUtil.cpp  PrintingNotSupportedException.cpp  UtilFailedException.cpp  UtilNotFoundException.cpp
src/DocxCompiler/: DocxCompilerAltChunkField.cpp  DocxCompilerBarcodeField.cpp  DocxCompilerBookmark.cpp  DocxCompilerBooleanField.cpp  DocxCompilerChartField.cpp  DocxCompilerChartFieldFixedSeries.cpp  DocxCompilerChartFieldSeries.cpp  DocxCompilerChartFieldSingleSeries.cpp  DocxCompilerChartFieldXY.cpp  DocxCompilerChartFieldXYSize.cpp  DocxCompilerDateTimeField.cpp  DocxCompilerField.cpp  DocxCompilerFile.cpp  DocxCompilerId.cpp  DocxCompilerItem.cpp  DocxCompilerItemFile.cpp  DocxCompilerItemGroup.cpp  DocxCompilerItemLayout.cpp  DocxCompilerNumberField.cpp  DocxCompilerPicField.cpp  DocxCompilerSettingsFile.cpp  DocxCompilerStyle.cpp  DocxCompilerStyleFile.cpp  DocxCompilerTableStyle.cpp  DocxCompilerTextField.cpp  DocxCompilerXmlString.cpp
src/DocxMerger/: DocxMergerAltChunkField.cpp  DocxMergerBarcodeField.cpp  DocxMergerBooleanField.cpp  DocxMergerChartAxis.cpp  DocxMergerChartAxisDateTime.cpp  DocxMergerChartAxisNumber.cpp  DocxMergerChartAxisText.cpp  DocxMergerChartField.cpp  DocxMergerChartFieldFixedSeries.cpp  DocxMergerChartFieldSeries.cpp  DocxMergerChartFieldSingleSeries.cpp  DocxMergerChartFieldXY.cpp  DocxMergerChartFieldXYSize.cpp  DocxMergerChartValues.cpp  DocxMergerDateTimeField.cpp  DocxMergerException.cpp  DocxMergerField.cpp  DocxMergerFile.cpp  DocxMergerId.cpp  DocxMergerItem.cpp  DocxMergerItemFile.cpp  DocxMergerItemGroup.cpp  DocxMergerItemLayout.cpp  DocxMergerNumberField.cpp  DocxMergerPasteAltChunkField.cpp  DocxMergerPasteBarcodeField.cpp  DocxMergerPasteBooleanField.cpp  DocxMergerPasteChartAxis.cpp  DocxMergerPasteChartAxisDateTime.cpp  DocxMergerPasteChartAxisNumber.cpp  DocxMergerPasteChartAxisText.cpp  DocxMergerPasteChartField.cpp  DocxMergerPasteChartFieldFixedSeries.cpp  DocxMergerPasteChartFieldSeries.cpp  DocxMergerPasteChartFieldSingleSeries.cpp  DocxMergerPasteChartFieldXY.cpp  DocxMergerPasteChartFieldXYSize.cpp  DocxMergerPasteChartValues.cpp  DocxMergerPasteDateTimeField.cpp  DocxMergerPasteField.cpp  (+10 more)
src/UnoUtil/: PropertyMap.cpp  UnoException.cpp  UnoUtilImpl.cpp
src/WordProcessingCompiler/: WordProcessingCompiler.cpp  dfwc.cpp  word-processing-compiler.cpp
src/WordProcessingMerger/: CompileVersionMismatchException.cpp  InvalidItemNameException.cpp  InvalidMergeDataException.cpp  TemplateNotLoadedException.cpp  WordProcessingException.cpp  WordProcessingMerger.cpp  dfw.cpp  word-processing-merger.cpp
src/barcode/: BarcodeFunc.cpp
src/console/: ConsoleException.cpp  ConsoleUsageException.cpp  GetOptException.cpp  InvalidArgException.cpp  InvalidOptException.cpp  MissingArgException.cpp  MissingOptException.cpp  UnexpectedArgException.cpp  UnexpectedOptException.cpp  getopt.c
src/json/: JsonException.cpp  JsonFunc.cpp  ParseJsonException.cpp  ParseJsonFileException.cpp
src/locale/: IcuException.cpp  InvalidCodePageException.cpp  InvalidDateFormatException.cpp  InvalidDateTimeStrException.cpp  InvalidFirstWeekDayException.cpp  InvalidYearOffsetException.cpp  LocaleException.cpp  LocaleFunc.cpp
src/math/: MathFunc.cpp
src/opc/: ContentTypeNotFound.cpp  OpcContentTypes.cpp  OpcException.cpp  OpcFunc.cpp  OpcImageCache.cpp  OpcImageFile.cpp  OpcPackage.cpp  OpcPart.cpp  OpcRelationship.cpp  OpcRelationships.cpp  PartNotFoundException.cpp  PartTypeNotFoundException.cpp
src/os/: DirNotFoundException.cpp  FileExistsException.cpp  FileNotFoundException.cpp  FileNotOpenException.cpp  FileNotRemovedException.cpp  InvalidFileUrlException.cpp  OsException.cpp  OsFunc.cpp  PathMissingExtException.cpp  PathMissingFileException.cpp  UnsupportedFileTypeException.cpp
src/parser/: ParserException.cpp  ParserFunc.cpp  UnclosedBracketException.cpp  UnexpectedBracketException.cpp  UnmatchedQuoteException.cpp
src/str/: StrEntries.cpp  StrFunc.cpp
src/time/: TimeFunc.cpp
src/unix/: UnixFunc.cpp
src/util/: ArgTypeMismatchException.cpp  DocxFactoryException.cpp  DocxFactoryTimer.cpp  GeneralException.cpp  UnknownException.cpp
src/win/: WinFunc.cpp
src/xml/: AsciiToXMLCh.cpp  DomException.cpp  InvalidXmlPathException.cpp  NodeNotFoundException.cpp  ParseXmlException.cpp  ParseXmlFileException.cpp  StrToXMLCh.cpp  Utf8ToXMLCh.cpp  XmlException.cpp  XmlFunc.cpp  XmlInitializer.cpp  (+1 more)
(+202 files in other folders)
